Fixed an error with the header and footer where they would hide behind the scroll bar. Also fixed an error where the downloads would not download due to the wrong path being set. Also fixed some mistakes in the Profile page.

--- a/css/Footer.css
+++ b/css/Footer.css
@@ -2,7 +2,6 @@
 {
 
    position: fixed;
-   left: 4px;
    bottom: 0;
    width: 99%;
    height: 20px;
